--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.5.3",
         "@tailwindcss/forms": "^0.4.0",
-        "alpinejs": "^3.4.2",
+        "alpinejs": "^3.2.6",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
+        "bootstrap": "^5.1.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.52.1",
+        "sass-loader": "^12.1.0",
         "tailwindcss": "^3.0.18"
     }
 }
