--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "private": true,
+    "private": true,    
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
@@ -24,5 +24,8 @@
         "sass": "^1.52.1",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^3.0.18"
-    }
+    },
+    "engines": {
+        "node": "16.15.0"
+      }
 }
