--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "anhskohbo/no-captcha": "^3.4",
         "appolous/lazada-php-sdk": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.9",
